EventList.datasource 削除前

--- a/googleOSD/googleOSD/googleOSD/App.config
+++ b/googleOSD/googleOSD/googleOSD/App.config
@@ -1,54 +1,54 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="GoogleOSD.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-    </sectionGroup>
-  </configSections>
-  <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
-  </startup>
-  <userSettings>
-    <GoogleOSD.Properties.Settings>
-      <setting name="companyId" serializeAs="String">
-        <value>9999</value>
-      </setting>
-      <setting name="companyName" serializeAs="String">
-        <value>FarEast Co,</value>
-      </setting>
-      <setting name="googleAcount" serializeAs="String">
-        <value>hkuwayama@coresoft-net.co.jp</value>
-      </setting>
-      <setting name="googlePassWord" serializeAs="String">
-        <value>15580824</value>
-      </setting>
-      <setting name="clientId" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="clientSecret" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="projectId" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="authUri" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="tokenUri" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="auth_providerX509CertUrl" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="redirectUris" serializeAs="String">
-        <value />
-      </setting>
-      <setting name="AriadneDataFolder" serializeAs="String">
-        <value />
-      </setting>
-    </GoogleOSD.Properties.Settings>
-  </userSettings>
-  <!--<connectionStrings>
-    <add name="CompanyEntities" connectionString="metadata=res://*/ScedModel.csdl|res://*/ScedModel.ssdl|res://*/ScedModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Company.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>-->
-<connectionStrings><add name="CompanyEntities" connectionString="metadata=res://*/ProjectModel.csdl|res://*/ProjectModel.ssdl|res://*/ProjectModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Company.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+	<configSections>
+		<sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+			<section name="GoogleOSD.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+		</sectionGroup>
+	</configSections>
+	<startup>
+		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1" />
+	</startup>
+	<userSettings>
+		<GoogleOSD.Properties.Settings>
+			<setting name="companyId" serializeAs="String">
+				<value>9999</value>
+			</setting>
+			<setting name="companyName" serializeAs="String">
+				<value>FarEast Co,</value>
+			</setting>
+			<setting name="googleAcount" serializeAs="String">
+				<value>hkuwayama@coresoft-net.co.jp</value>
+			</setting>
+			<setting name="googlePassWord" serializeAs="String">
+				<value>15580824</value>
+			</setting>
+			<setting name="clientId" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="clientSecret" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="projectId" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="authUri" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="tokenUri" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="auth_providerX509CertUrl" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="redirectUris" serializeAs="String">
+				<value />
+			</setting>
+			<setting name="AriadneDataFolder" serializeAs="String">
+				<value />
+			</setting>
+		</GoogleOSD.Properties.Settings>
+	</userSettings>
+	<connectionStrings>
+		<add name="CompanyEntities" connectionString="metadata=res://*/ProjectModel.csdl|res://*/ProjectModel.ssdl|res://*/ProjectModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDB)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\Company.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	</connectionStrings>
+</configuration>
