--- a/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Company.cs">
       <DependentUpon>ProjectModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Companys.cs">
+      <DependentUpon>EventModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Constant.cs" />
     <Compile Include="Controls\WaitingDLog.xaml.cs">
       <DependentUpon>WaitingDLog.xaml</DependentUpon>
@@ -97,6 +100,24 @@
     </Compile>
     <Compile Include="EventList.xaml.cs">
       <DependentUpon>EventList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="EventModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="f_Color.cs">
+      <DependentUpon>EventModel.tt</DependentUpon>
     </Compile>
     <Compile Include="GAttachFile.cs" />
     <Compile Include="GCalender.xaml.cs">
@@ -156,10 +177,10 @@
       <DependentUpon>WaitingCircle.xaml</DependentUpon>
     </Compile>
     <Compile Include="t_events.cs">
-      <DependentUpon>ProjectModel.tt</DependentUpon>
+      <DependentUpon>EventModel.tt</DependentUpon>
     </Compile>
     <Compile Include="t_project_base.cs">
-      <DependentUpon>ProjectModel.tt</DependentUpon>
+      <DependentUpon>EventModel.tt</DependentUpon>
     </Compile>
     <Compile Include="WebWindow.xaml.cs">
       <DependentUpon>WebWindow.xaml</DependentUpon>
@@ -254,9 +275,18 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>ScedModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <EntityDeploy Include="EventModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>EventModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="EventModel.edmx.diagram">
+      <DependentUpon>EventModel.edmx</DependentUpon>
+    </None>
     <None Include="ProjectModel.edmx.diagram">
       <DependentUpon>ProjectModel.edmx</DependentUpon>
     </None>
+    <None Include="Properties\DataSources\SceduleModel.datasource" />
+    <None Include="Properties\DataSources\t_project_base.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -272,6 +302,16 @@
     <Content Include="Company_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Company.mdf</DependentUpon>
+    </Content>
+    <Content Include="EventModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventModel.edmx</DependentUpon>
+      <LastGenOutput>EventModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="EventModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventModel.edmx</DependentUpon>
+      <LastGenOutput>EventModel.cs</LastGenOutput>
     </Content>
     <Content Include="ProjectModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
@@ -326,9 +366,6 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Properties\DataSources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
