--- a/googleOSD/googleOSD/googleOSD/googleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/googleOSD.csproj
@@ -86,6 +86,9 @@
     <Compile Include="Company.cs">
       <DependentUpon>ProjectModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Companys.cs">
+      <DependentUpon>EventModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Constant.cs" />
     <Compile Include="Controls\WaitingDLog.xaml.cs">
       <DependentUpon>WaitingDLog.xaml</DependentUpon>
@@ -97,6 +100,24 @@
     </Compile>
     <Compile Include="EventList.xaml.cs">
       <DependentUpon>EventList.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="EventModel.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventModel.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventModel.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="EventModel.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>EventModel.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="f_Color.cs">
+      <DependentUpon>EventModel.tt</DependentUpon>
     </Compile>
     <Compile Include="GAttachFile.cs" />
     <Compile Include="GCalender.xaml.cs">
@@ -156,10 +177,10 @@
       <DependentUpon>WaitingCircle.xaml</DependentUpon>
     </Compile>
     <Compile Include="t_events.cs">
-      <DependentUpon>ProjectModel.tt</DependentUpon>
+      <DependentUpon>EventModel.tt</DependentUpon>
     </Compile>
     <Compile Include="t_project_base.cs">
-      <DependentUpon>ProjectModel.tt</DependentUpon>
+      <DependentUpon>EventModel.tt</DependentUpon>
     </Compile>
     <Compile Include="WebWindow.xaml.cs">
       <DependentUpon>WebWindow.xaml</DependentUpon>
@@ -254,10 +275,16 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>ScedModel.Designer.cs</LastGenOutput>
     </EntityDeploy>
+    <EntityDeploy Include="EventModel.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>EventModel.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="EventModel.edmx.diagram">
+      <DependentUpon>EventModel.edmx</DependentUpon>
+    </None>
     <None Include="ProjectModel.edmx.diagram">
       <DependentUpon>ProjectModel.edmx</DependentUpon>
     </None>
-    <None Include="Properties\DataSources\EventList.datasource" />
     <None Include="Properties\DataSources\SceduleModel.datasource" />
     <None Include="Properties\DataSources\t_project_base.datasource" />
     <None Include="Properties\Settings.settings">
@@ -266,7 +293,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Company.mdf">
@@ -275,6 +304,16 @@
     <Content Include="Company_log.ldf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Company.mdf</DependentUpon>
+    </Content>
+    <Content Include="EventModel.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventModel.edmx</DependentUpon>
+      <LastGenOutput>EventModel.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="EventModel.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>EventModel.edmx</DependentUpon>
+      <LastGenOutput>EventModel.cs</LastGenOutput>
     </Content>
     <Content Include="ProjectModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
