--- a/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/GoogleOSD.csproj
@@ -293,7 +293,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Company.mdf">
