--- a/googleOSD/googleOSD/googleOSD/googleOSD.csproj
+++ b/googleOSD/googleOSD/googleOSD/googleOSD.csproj
@@ -14,6 +14,7 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -26,7 +27,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -138,7 +138,100 @@
     <Compile Include="GoogleDriveUtil.cs" />
     <Compile Include="GOAuthModel.cs" />
     <Compile Include="LocalFileUtil.cs" />
-    <Compile Include="Model\f_color.cs" />
+    <Compile Include="Models\AccountsPayableSummaries.cs" />
+    <Compile Include="Models\AccountsReceivableSummaries.cs" />
+    <Compile Include="Models\AdminUsers.cs" />
+    <Compile Include="Models\BankAccounts.cs" />
+    <Compile Include="Models\Banks.cs" />
+    <Compile Include="Models\BillingSummaries.cs" />
+    <Compile Include="Models\BudgetDepartments.cs" />
+    <Compile Include="Models\BudgetOwnCompanies.cs" />
+    <Compile Include="Models\BudgetStaffs.cs" />
+    <Compile Include="Models\BudgetSuppliers.cs" />
+    <Compile Include="Models\CatalogProductPriceMatrixes.cs" />
+    <Compile Include="Models\CatalogProducts.cs" />
+    <Compile Include="Models\Catalogs.cs" />
+    <Compile Include="Models\CategoryNames.cs" />
+    <Compile Include="Models\ClientNames.cs" />
+    <Compile Include="Models\ConfirmationProcesses.cs" />
+    <Compile Include="Models\ContractLicenses.cs" />
+    <Compile Include="Models\Contracts.cs" />
+    <Compile Include="Models\CustomerConditionBases.cs" />
+    <Compile Include="Models\CustomerConditionDetails.cs" />
+    <Compile Include="Models\Deadlines.cs" />
+    <Compile Include="Models\Departments.cs" />
+    <Compile Include="Models\DepositAllocations.cs" />
+    <Compile Include="Models\Deposits.cs" />
+    <Compile Include="Models\Events.cs" />
+    <Compile Include="Models\FtBalanceAccountsPayables.cs" />
+    <Compile Include="Models\FtBalanceAccountsReceivables.cs" />
+    <Compile Include="Models\FtBalanceBillings.cs" />
+    <Compile Include="Models\FtBalancePayments.cs" />
+    <Compile Include="Models\f_color.cs" />
+    <Compile Include="Models\GoogleAccount.cs" />
+    <Compile Include="Models\HeadlineNames.cs" />
+    <Compile Include="Models\ImportItemSettings.cs" />
+    <Compile Include="Models\Lengths.cs" />
+    <Compile Include="Models\Licenses.cs" />
+    <Compile Include="Models\LicenseUsers.cs" />
+    <Compile Include="Models\LogingUsers.cs" />
+    <Compile Include="Models\LoginUserConnections.cs" />
+    <Compile Include="Models\LoginUsers.cs" />
+    <Compile Include="Models\MailSettings.cs" />
+    <Compile Include="Models\NumberingSettings.cs" />
+    <Compile Include="Models\Numbers.cs" />
+    <Compile Include="Models\OptionSettings.cs" />
+    <Compile Include="Models\OwnCompanies.cs" />
+    <Compile Include="Models\OwnCompanyFileManagement.cs" />
+    <Compile Include="Models\OwnCompanyStaffs.cs" />
+    <Compile Include="Models\PaymentLumps.cs" />
+    <Compile Include="Models\PaymentSummaries.cs" />
+    <Compile Include="Models\Plans.cs" />
+    <Compile Include="Models\PostalCodes.cs" />
+    <Compile Include="Models\Prefectures.cs" />
+    <Compile Include="Models\ProductPriceMatrixes.cs" />
+    <Compile Include="Models\Products.cs" />
+    <Compile Include="Models\ProjectBases.cs" />
+    <Compile Include="Models\ProjectSlipAdvanceDetails.cs" />
+    <Compile Include="Models\ProjectSlipAdvanceHeaders.cs" />
+    <Compile Include="Models\ProjectSlipCostDetails.cs" />
+    <Compile Include="Models\ProjectSlipCostHeaders.cs" />
+    <Compile Include="Models\ProjectSlipEstimateDetails.cs" />
+    <Compile Include="Models\ProjectSlipEstimateHeaders.cs" />
+    <Compile Include="Models\ProjectSlipInvoiceDetails.cs" />
+    <Compile Include="Models\ProjectSlipInvoiceHeaders.cs" />
+    <Compile Include="Models\ProjectSlipLetters.cs" />
+    <Compile Include="Models\ProjectSlipOrderDetails.cs" />
+    <Compile Include="Models\ProjectSlipOrderHeaders.cs" />
+    <Compile Include="Models\ProjectSlipSaleDetails.cs" />
+    <Compile Include="Models\ProjectSlipSaleHeaders.cs" />
+    <Compile Include="Models\ProjectSlipTemplateDetails.cs" />
+    <Compile Include="Models\ProjectSlipTemplateHeaders.cs" />
+    <Compile Include="Models\ProjectSlipTemporaryDetails.cs" />
+    <Compile Include="Models\ProjectSlipTemporaryHeaders.cs" />
+    <Compile Include="Models\Properties.cs" />
+    <Compile Include="Models\PurchaseBases.cs" />
+    <Compile Include="Models\PurchaseSlipLetters.cs" />
+    <Compile Include="Models\PurchaseSlipOrderDetails.cs" />
+    <Compile Include="Models\PurchaseSlipOrderHeaders.cs" />
+    <Compile Include="Models\PurchaseSlipPurchaseDetails.cs" />
+    <Compile Include="Models\PurchaseSlipPurchaseHeaders.cs" />
+    <Compile Include="Models\PurchaseSlipTemplateDetails.cs" />
+    <Compile Include="Models\PurchaseSlipTemplateHeaders.cs" />
+    <Compile Include="Models\SearchConditions.cs" />
+    <Compile Include="Models\ServiceSettings.cs" />
+    <Compile Include="Models\SidebarCategories.cs" />
+    <Compile Include="Models\SlipSettings.cs" />
+    <Compile Include="Models\SupplierProductPriceRates.cs" />
+    <Compile Include="Models\Suppliers.cs" />
+    <Compile Include="Models\SupplierStaffs.cs" />
+    <Compile Include="Models\SupplierVarietyRates.cs" />
+    <Compile Include="Models\SystemNames.cs" />
+    <Compile Include="Models\SystemSettings.cs" />
+    <Compile Include="Models\Taxs.cs" />
+    <Compile Include="Models\Transactions.cs" />
+    <Compile Include="Models\Varieties.cs" />
+    <Compile Include="Models\Versions.cs" />
     <Compile Include="MonthInfo.cs" />
     <Compile Include="MySQLBase.xaml.cs">
       <DependentUpon>MySQLBase.xaml</DependentUpon>
@@ -307,13 +400,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Company.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Company_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>Company.mdf</DependentUpon>
-    </Content>
     <Content Include="EventModel.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>EventModel.edmx</DependentUpon>
@@ -357,19 +443,22 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="EntityFramework">
-      <Version>6.2.0</Version>
+      <Version>6.4.4</Version>
     </PackageReference>
     <PackageReference Include="EntityFramework.ja">
       <Version>6.2.0</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Calendar.v3">
-      <Version>1.46.0.1986</Version>
+      <Version>1.49.0.2072</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Drive.v3">
-      <Version>1.46.0.1986</Version>
+      <Version>1.49.0.2072</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Toolkit.Wpf.UI.Controls.WebView">
-      <Version>6.0.1</Version>
+      <Version>6.1.2</Version>
+    </PackageReference>
+    <PackageReference Include="MySql.Data">
+      <Version>8.0.21</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.3</Version>
