--- a/uitest/Tab/TabCon/TabCon/TabCon.csproj
+++ b/uitest/Tab/TabCon/TabCon/TabCon.csproj
@@ -204,7 +204,7 @@
     <Compile Include="ViewModels\MySQLBaseViewModel.cs" />
     <Compile Include="ViewModels\SQLTablesViewModel.cs" />
     <Compile Include="ViewModels\Widget .cs" />
-    <Compile Include="ViewModels\X-1-3ViewModel.cs" />
+    <Compile Include="ViewModels\X_1_3ViewModel.cs" />
     <Compile Include="Views\ChildPageView.xaml.cs">
       <DependentUpon>ChildPageView.xaml</DependentUpon>
     </Compile>
@@ -226,8 +226,8 @@
     <Compile Include="Views\NaviWindow.xaml.cs">
       <DependentUpon>NaviWindow.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Views\X-1-3.xaml.cs">
-      <DependentUpon>X-1-3.xaml</DependentUpon>
+    <Compile Include="Views\X_1_3.xaml.cs">
+      <DependentUpon>X_1_3.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewTabControl.xaml.cs">
       <DependentUpon>ViewTabControl.xaml</DependentUpon>
@@ -279,7 +279,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Views\X-1-3.xaml">
+    <Page Include="Views\X_1_3.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -330,7 +330,7 @@
       <Version>1.49.0.2087</Version>
     </PackageReference>
     <PackageReference Include="Google.Apis.Drive.v3">
-      <Version>1.49.0.2093</Version>
+      <Version>1.49.0.2111</Version>
     </PackageReference>
     <PackageReference Include="LivetCask">
       <Version>3.2.3.1</Version>
@@ -345,7 +345,7 @@
       <Version>3.0.40218</Version>
     </PackageReference>
     <PackageReference Include="MySql.Data">
-      <Version>8.0.21</Version>
+      <Version>8.0.22</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
