キー割り付け

--- a/uitest/Tab/TabCon/TabCon/TabCon.csproj
+++ b/uitest/Tab/TabCon/TabCon/TabCon.csproj
@@ -388,5 +388,10 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\CalcIcon.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
