--- a/uitest/calc/CalcTest/WpfApp1/WpfApp1.csproj
+++ b/uitest/calc/CalcTest/WpfApp1/WpfApp1.csproj
@@ -38,8 +38,9 @@
     <StartupObject>WpfApp1.App</StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CS_Calculator">
-      <HintPath>..\..\..\CS_Calculator\CS_Calculator.dll</HintPath>
+    <Reference Include="CS_Calculator, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\CS_Calculator\CS_Calculator.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
