X14スケジュールリスト追加

--- a/uitest/Tab/TabCon/TabCon/TabCon.csproj
+++ b/uitest/Tab/TabCon/TabCon/TabCon.csproj
@@ -236,6 +236,7 @@
     <Compile Include="ViewModels\Widget .cs" />
     <Compile Include="ViewModels\X_1_1ViewModel.cs" />
     <Compile Include="ViewModels\X_1_3ViewModel.cs" />
+    <Compile Include="ViewModels\X_1_4ViewModel.cs" />
     <Compile Include="Views\ChildPageView.xaml.cs">
       <DependentUpon>ChildPageView.xaml</DependentUpon>
     </Compile>
@@ -265,6 +266,9 @@
     </Compile>
     <Compile Include="Views\X_1_3.xaml.cs">
       <DependentUpon>X_1_3.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\X_1_4.xaml.cs">
+      <DependentUpon>X_1_4.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewTabControl.xaml.cs">
       <DependentUpon>ViewTabControl.xaml</DependentUpon>
@@ -325,6 +329,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\X_1_3.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\X_1_4.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
