--- a/uitest/Tab/TabCon/CS_Calculator/CS_Calculator.csproj
+++ b/uitest/Tab/TabCon/CS_Calculator/CS_Calculator.csproj
@@ -88,5 +88,52 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Expression.Blend.Sdk.WPF">
+      <Version>1.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Expression.Interaction">
+      <Version>3.0.40218</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask.Behaviors">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask.Collections">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask.Converters">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask.Core">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask.EventListeners">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask.Messaging">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask.Mvvm">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask.StatefulModel">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetCask2">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="LivetExtensions">
+      <Version>3.2.3.1</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Xaml.Behaviors.Wpf">
+      <Version>1.1.19</Version>
+    </PackageReference>
+    <PackageReference Include="MicrosoftExpressionInteractions">
+      <Version>3.0.40218</Version>
+    </PackageReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
